fix(form-field-dropdown): value truncates if longer than space available

--- a/packages/genesys-spark-components/src/components/stable/gux-form-field/components/gux-form-field-dropdown/gux-form-field-dropdown.less
+++ b/packages/genesys-spark-components/src/components/stable/gux-form-field/components/gux-form-field-dropdown/gux-form-field-dropdown.less
@@ -28,6 +28,7 @@
 
 .gux-input-and-error-container {
   flex-grow: 1;
+  width: 1px;
 
   .gux-input {
     &.gux-disabled {
